--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@openzeppelin/contracts": "^4.7.3",
-    "hardhat": "^2.10.2"
+    "ethers": "^5.7.0",
+    "hardhat": "^2.10.2",
+    "hardhat-deploy": "^0.11.12"
   }
 }
